blog: modify introduction blog

--- a/content/lighthouse-research-introduction/index.mdx
+++ b/content/lighthouse-research-introduction/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Welcome the Lighthouse Research Team to the world!!!
 description: Learn about the mission, vision, and activities of the Lighthouse Research Team.
-image: "../../public/images/lighthouse_intro.jpeg"
+image: "../../public/images/lighthouse-research-introduction/lighthouse_intro.jpeg"
 publishedAt: "2024-09-02"
 updatedAt: "2024-09-02"
 author: "Lighthouse Research Team"
@@ -16,11 +16,15 @@ At **Lighthouse Research Team**, we are driven by a singular purpose: to gain an
 
 ## Our Mission and Vision
 
+![Mission and Vision](../../public/images/lighthouse-research-introduction/lighthouse_mission.jpg)
+
 **Mission**: Our mission is to question and challenge the dominance of closed technology by pushing forward with open, innovative research in AI. We aim to foster an environment where knowledge is freely shared, and groundbreaking ideas emerge from collaborative efforts.
 
 **Vision**: We aspire to become one of the most reputable research teams globally. Our goal is not just to contribute to the AI field but to lead it, setting new standards and inspiring others to follow.
 
 ## Our Activities
+
+![Activities](../../public/images/lighthouse-research-introduction/seeking_knowledge.webp)
 
 To fulfill our mission and vision, we engage in a range of activities that keep us at the cutting edge of AI research:
 
