blog: modify the intro blog

--- a/content/lighthouse-research-introduction/index.mdx
+++ b/content/lighthouse-research-introduction/index.mdx
@@ -16,7 +16,13 @@ At **Lighthouse Research Team**, we are driven by a singular purpose: to gain an
 
 ## Our Mission and Vision
 
-![Mission and Vision](../../public/images/lighthouse-research-introduction/lighthouse_mission.jpg)
+<Image
+  src="/images/lighthouse-research-introduction/lighthouse_mission.jpg"
+  width="718"
+  height="404"
+  alt="Image"
+  sizes="100vw"
+/>
 
 **Mission**: Our mission is to question and challenge the dominance of closed technology by pushing forward with open, innovative research in AI. We aim to foster an environment where knowledge is freely shared, and groundbreaking ideas emerge from collaborative efforts.
 
@@ -24,7 +30,14 @@ At **Lighthouse Research Team**, we are driven by a singular purpose: to gain an
 
 ## Our Activities
 
-![Activities](../../public/images/lighthouse-research-introduction/seeking_knowledge.webp)
+<Image
+  src="/images/lighthouse-research-introduction/seeking_knowledge.webp"
+  width="718"
+  height="404"
+  alt="Image"
+  sizes="100vw"
+/>
+
 
 To fulfill our mission and vision, we engage in a range of activities that keep us at the cutting edge of AI research:
 
